remove comments from reqStatus, reqHistory
